--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,14 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-   
-  
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;700;900&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <style>
       *{
         padding:0px;
         margin:0px;
+        font-family: 'Roboto', sans-serif;
       }
     </style>
     <title>React App</title>
